--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  CONFORMITY_REGION: us-east-1
+  CONFORMITY_REGION: us-1
   STACK_NAME: DeployedAppStack
   S3_BUCKET: Room1Bucket-56789   # Replace with your S3 bucket name
 
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
