Updated the bucket name

--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -9,7 +9,7 @@ env:
   AWS_REGION: us-east-1
   CONFORMITY_REGION: us-west-2
   STACK_NAME: DeployedAppStack
-  S3_BUCKET: Room1Bucket-56789   # Replace with your S3 bucket name
+  S3_BUCKET: room1bucket20250912   # Replace with your S3 bucket name
 
 jobs:
   build-and-deploy:
